[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thehook"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "chromadb>=1.0",
]

[project.scripts]
thehook = "thehook.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/thehook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
