[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thehook"
version = "0.1.0"
description = "Self-improving long-term memory for AI coding agents (Claude Code & Cursor)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "LouisB739" },
]
keywords = ["ai", "claude", "cursor", "memory", "coding-agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "chromadb>=1.0",
]

[project.urls]
Homepage = "https://github.com/LouisB739/thehook"
Repository = "https://github.com/LouisB739/thehook"
Issues = "https://github.com/LouisB739/thehook/issues"

[project.scripts]
thehook = "thehook.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/thehook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
